--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="http://www.cse.iitd.ac.in/~dishant">Dishant Goyal</a>
+    <a class="site-title" href="http://www.cse.iitd.ac.in/~dishant">Ajay Pratap Singh Lodhi</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
