--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 <!--<p><img style="float: right; width: 200px; margin:0 30px 20px 0" src="Homepage/current.png"></p>
 -->
-<p> <img style="float:right; width: 250px; margin: 0 20px 20px 0" src = "Homepage/current.png"></p>
+<p> <img style="float:right; width: 250px; margin: 0 20px 20px 0" src = "Homepage/current.jpg"></p>
 
 <p>Hi! I am a Ph.D. student in the <a href="http://www.cse.iitd.ernet.in/">Computer Science and Engineering Department</a>  at <a href="http://www.iitd.ac.in/">IIT Delhi</a>. I am working with <a href="http://www.cse.iitd.ernet.in/~rjaiswal/">Prof. Ragesh Jaiswal</a>
 and <a href="http://www.cse.iitd.ernet.in/~amitk/">Prof. Amit Kumar</a>
