--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Dishant Goyal</title>
+    <title>Ajay Pratap Singh Lodhi</title>
     <meta name="description" content="PhD Student">
 
     <link rel="stylesheet" href="Homepage/main.css">
