--- a/index.html
+++ b/index.html
@@ -151,16 +151,7 @@
 -->
 <p> <img style="float:right; width: 250px; margin: 0 20px 20px 0" src = "Homepage/current.jpg"></p>
 
-<p>Hi! I am a Ph.D. student in the <a href="http://www.cse.iitd.ernet.in/">Computer Science and Engineering Department</a>  at <a href="http://www.iitd.ac.in/">IIT Delhi</a>. I am working with <a href="http://www.cse.iitd.ernet.in/~rjaiswal/">Prof. Ragesh Jaiswal</a>
-and <a href="http://www.cse.iitd.ernet.in/~amitk/">Prof. Amit Kumar</a>
-</p>
-
-
-<p>I am interested in Theoretical Computer Science. My research area lies in Clustering and Approximation Algorithms. <br>
-</p>
-
-<p> 
-Here is my <a href="https://scholar.google.co.in/citations?user=2DSJgpsAAAAJ&hl=en&authuser=3&oi=sra">Google Scholar</a> and <a href="https://dblp.org/pers/hd/g/Goyal:Dishant">DBLP</a>.
+<p>Hi! I am a Ph.D. student in the <a href="http://cart.iitd.ac.in/">Centre for Automotive Research and Tribology</a>  at <a href="http://www.iitd.ac.in/">IIT Delhi</a>. I am working with <a href="https://web.iitd.ac.in/~dkumar/">Prof. Deepak Kumar</a>. I am interested in Metal Working Fluids. Here is my <a href="https://scholar.google.com/citations?user=2C4A8msAAAAJ&hl=en">Google Scholar</a>.
 </p>
 
 <p>
@@ -180,36 +171,14 @@ Here is a <a href= "https://www.youtube.com/watch?time_continue=1&v=JJ6yGgFJ74k&
 <ul>
 <li>
 <p>
-<strong> Tight FPT Approximation for Constrained k-Supplier and k-Center </strong><br>
-with Ragesh Jaiswal <br>
-<a href = "https://arxiv.org/abs/2110.14242">[arXiv]</a>
+<strong>Natural ingredients based environmental friendly metalworking fluid with superior lubricity</strong><br>
+with Deepak Kumar<br>
+<a href = "https://www.sciencedirect.com/science/article/pii/S0927775720316642">[Link]</a>
 </p>
 </li>
-<li>
-<p><strong>Tight FPT Approximation for Socially Fair Clustering</strong><br>
-with Ragesh Jaiswal <font color = "blue"></font><br>
-<a href = "https://arxiv.org/abs/2106.06755">[arXiv]</a></p>
-</li>
-<li>
-<p><strong>Hardness of Approximation for Euclidean k-Median</strong><br>
-with Anup Bhattacharya and Ragesh Jaiswal <font color = "blue"></font><br>
-<a href = "https://drops.dagstuhl.de/opus/volltexte/2021/14697/">[APPROX 2021]</a> 
-<a href = "https://arxiv.org/pdf/2011.04221.pdf">[arXiv]</a></p>
-</li>  
-  <li>
-    <p><strong>FPT Approximation for Constrained Metric k-Median and k-Means</strong><br>
-with Ragesh Jaiswal and Amit Kumar <font color="blue"></font> <br> 
-<a href="https://drops.dagstuhl.de/opus/frontdoor.php?source_opus=13317">[IPEC 2020]</a></p>
-  </li>
-<li>
-    <p><strong>On Sampling Based Algorithms for k-Means</strong><br>
-with Anup Bhattacharya, Ragesh Jaiswal, and Amit Kumar  <font color="blue"></font> <br> 
-<a href="https://drops.dagstuhl.de/opus/frontdoor.php?source_opus=13254">[FSTTCS 2020]</a></p>
-  </li>
 </ul>
 <br/>
  
-
 <h2 id="news">Education</h2>
 <ul>
   <li>
